# aws-policy-generator

./: README.md  aws-policy-generator  mypy.ini  pyproject.toml  requirements.dev.txt  requirements.txt
src/aws_policy_generator/: cli.py
